--- a/Blog/appsettings.json
+++ b/Blog/appsettings.json
@@ -1,5 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=BlogDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=BlogDB;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "IdentityDb": "Server=(localdb)\\MSSQLLocalDB;Database=BlogIdentityDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
