moved MarkdownTagHelper to nuget package

--- a/Blog/Blog.csproj
+++ b/Blog/Blog.csproj
@@ -5,13 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MarkdownTagHelper" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\MarkdownTagHelper\MarkdownTagHelper\MarkdownTagHelper.csproj" />
   </ItemGroup>
 
   <ItemGroup>
