--- a/Blog/appsettings.json
+++ b/Blog/appsettings.json
@@ -2,5 +2,6 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=BlogDB;Trusted_Connection=True;MultipleActiveResultSets=true",
     "IdentityDb": "Server=(localdb)\\MSSQLLocalDB;Database=BlogIdentityDB;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  },
+  "HostAddres": "http://localhost:55924"
 }
