blogData and startup fix

--- a/Blog/Blog.csproj
+++ b/Blog/Blog.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Update="BlogData.json">
+    <Content Update="wwwroot\BlogData.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
