--- a/Blog/appsettings.json
+++ b/Blog/appsettings.json
@@ -3,5 +3,5 @@
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=BlogDB;Trusted_Connection=True;MultipleActiveResultSets=true",
     "IdentityDb": "Server=(localdb)\\MSSQLLocalDB;Database=BlogIdentityDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
-  "HostAddres": "http://localhost:55924"
+  "HostAddres": "https://bartoszo.azurewebsites.net/"
 }
