connection string update

--- a/Blog/appsettings.json
+++ b/Blog/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=BlogDB;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "IdentityDb": "Server=(localdb)\\MSSQLLocalDB;Database=BlogIdentityDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "mainDB": "Server=tcp:boleaczekblogdb.database.windows.net,1433;Initial Catalog=blogIdentityDB;Persist Security Info=False;User ID=boleaczek;Password=aLD547_98k;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "userDb": "Server=tcp:boleaczekblogdb.database.windows.net,1433;Initial Catalog=BlogDB;Persist Security Info=False;User ID=boleaczek;Password=aLD54798k;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "HostAddres": "https://bartoszo.azurewebsites.net/"
 }
