--- a/Blog/appsettings.json
+++ b/Blog/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
     "mainDB": "Server=tcp:boleaczekblogdb.database.windows.net,1433;Initial Catalog=blogIdentityDB;Persist Security Info=False;User ID=boleaczek;Password=aLD547_98k;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-    "userDb": "Server=tcp:boleaczekblogdb.database.windows.net,1433;Initial Catalog=BlogDB;Persist Security Info=False;User ID=boleaczek;Password=aLD547_98k;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "userDb": "Server=tcp:boleaczekblogdb.database.windows.net,1433;Initial Catalog=BlogDB;Persist Security Info=False;User ID=boleaczek;Password=aXH_1025@lg;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "HostAddres": "https://bartoszo.azurewebsites.net/"
 }
