--- a/Blog/appsettings.json
+++ b/Blog/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=BlogDB;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "IdentityDb": "Server=(localdb)\\MSSQLLocalDB;Database=BlogIdentityDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "server=127.0.0.1;uid=blog_local_test;pwd=test;database=blog_main",
+    "IdentityDb": "server=127.0.0.1;uid=blog_local_test;pwd=test;database=blog_identity"
   }
 }
